--- a/config/driver.ini
+++ b/config/driver.ini
@@ -7,6 +7,18 @@ port = 4723
 deviceName = a22ec83d
 platformVersion = 6.0.1
 noReset = true
+newCommandTimeout = 180
+
+
+[P7C0218309010307]
+platformName = Android
+appPackage = com.imo.android.imoimalpha
+appActivity =  com.imo.android.imoim.activities.Home
+ip = 127.0.0.1
+port = 4726
+deviceName = P7C0218309010307
+platformVersion = 8.0.0
+noReset = true
 
 
 [88LX01KWG]
